--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,5 +4,21 @@ ja:
       payment:
         credit_card: "クレジットカード"
         transfer: "銀行振込"
-    
-    # ステータスのenumも作る
+      status:
+        waiting_for_payment: "入金待ち"
+        payment_confirmation: "入金確認"
+        in_production: "製作中"
+        preparing_to_ship: "発送準備中"
+        shipped: "発送済み"
+    order_detail:
+      making_status:
+        zero: "制作不可"
+        one: "制作待ち"
+        two: "制作中"
+        three: "制作完了"
+      status:
+        waiting_for_payment: "入金待ち"
+        payment_confirmation: "入金確認"
+        in_production: "製作中"
+        preparing_to_ship: "発送準備中"
+        shipped: "発送済み"
